--- a/helm-bookinfo1/values.yaml
+++ b/helm-bookinfo1/values.yaml
@@ -5,7 +5,10 @@
 gateway:
   selector: ingressgateway
   hostname: example.com
-  uri:      productpage
+  uri: /productpage
+  uri1: /static
+  uri2: /login
+  uri3: /logout
 
   httpsRedirect: false
 
